<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_title"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/txt_space"
        android:background="@color/secondaryDarkColor"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@string/font_family"
        android:elevation="@dimen/elevation" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:layout_marginBottom="@dimen/margin">

        <EditText
            android:id="@+id/edtBillAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:maxLength="8"
            android:digits="0123456789."
            android:textSize="@dimen/txt_size"
            android:hint="@string/tip_hint"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@color/secondaryTextColor"/>

        <TextView
            android:id="@+id/txtTipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_percent"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:textSize="@dimen/txt_size"
            android:paddingStart="@dimen/txt_space"
            android:paddingEnd="@dimen/txt_space"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@string/font_family"
            android:textAllCaps="true"/>

        <SeekBar
            android:id="@+id/sbTipPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:paddingTop="@dimen/txt_space"
            android:max="100"
            android:progress="20"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amt"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:paddingEnd="@dimen/txt_space"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@string/font_family"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txtTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:paddingEnd="@dimen/txt_space"
            android:gravity="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/txt_size"
            android:background="@color/secondaryLightColor"
            android:elevation="@dimen/elevation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_paid"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@string/font_family"
            android:paddingEnd="@dimen/txt_space"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txtTotalToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:paddingEnd="@dimen/txt_space"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/secondaryTextColor"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin"
            android:background="@color/secondaryLightColor"
            android:elevation="@dimen/elevation" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:layout_marginTop="@dimen/margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savings_title"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/txt_space"
            android:background="@color/secondaryDarkColor"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            android:layout_margin="@dimen/margin"
            android:fontFamily="@string/font_family"
            android:elevation="@dimen/elevation" />

        <EditText
            android:id="@+id/edtSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_columnSpan="2"
            android:maxLength="8"
            android:digits="0123456789."
            android:textSize="@dimen/txt_size"
            android:hint="@string/salary_hint"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@color/secondaryTextColor"/>

        <TextView
            android:id="@+id/txtSavingsPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saving_percent"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:textSize="@dimen/txt_size"
            android:paddingStart="@dimen/txt_space"
            android:paddingEnd="@dimen/txt_space"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@string/font_family"
            android:textAllCaps="true"/>

        <SeekBar
            android:id="@+id/sbSavingPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:paddingTop="@dimen/txt_space"
            android:max="100"
            android:progress="25"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savings_amt"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:paddingEnd="@dimen/txt_space"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/secondaryTextColor"
            android:fontFamily="@string/font_family"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txtTotalSavings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:paddingEnd="@dimen/txt_space"
            android:textSize="@dimen/txt_size"
            android:textColor="@color/secondaryTextColor"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin"
            android:background="@color/secondaryLightColor"
            android:elevation="@dimen/elevation" />

    </GridLayout>

</LinearLayout>

</ScrollView>